# zici

./: .gitignore  README.md  dev.sh  next.config.ts  package-lock.json  package.json
backend/: .env.example  .mcp.json  README.md  alembic.ini  gunicorn.conf.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2903595ebba4_create_initial_tables.py  4f1d7a9b2c11_add_word_explanation_cache.py  7e7ac2050152_add_display_language_to_users.py  bf4f1a2c91e7_add_quiz_pinyin_distractor_sets.py
backend/app/: main.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/data/: grade-7-1.json  grade-7-2.json  grade-8-1.json  grade-8-2.json  grade-9-2.json  index.json  yicuo-idioms.json
backend/app/db/: session.py
backend/app/models/: chat.py  progress.py  quiz.py  user.py  word.py
backend/app/routers/: auth.py  chat.py  progress.py  quiz.py  review.py  stats.py  words.py
backend/app/schemas/: auth.py  chat.py  progress.py  quiz.py  stats.py
backend/app/services/: auth.py  chat.py  quiz.py  quiz_distractors.py  srs.py  stats.py  words.py
backend/legacy_flask/: README.md  app.py
backend/legacy_flask/blueprints/: progress.py  review.py  words.py
backend/scripts/: seed.py  seed_demo.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_parity.py  test_quiz.py  test_review.py  test_srs.py  test_stats.py  test_words.py
clipwise/: README.md  scenario.yaml
demo-dev/: README.md
docs/: api-examples.md  architecture.md  pinyin-quiz-distractor-plan.md
public/: manifest.json
supabase/: config.toml
(+22 files in other folders)
