[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "fastapi>=0.136.3",
    "gunicorn>=26.0.0",
    "httpx>=0.28.1",
    "openai>=2.38.0",
    "passlib>=1.7.4",
    "pydantic-settings>=2.14.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.29",
    "sqlalchemy[asyncio]>=2.0.50",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
